--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.language": "en,en-US,en-GB,pt",
     "cSpell.words": [
         "Marcacao",
+        "Tabulero",
         "vizinhanca"
     ]
 }
